--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <!-- Restaurants will be dynamically added here -->
     </main>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 
     
 </body>
