--- a/restaurant.html
+++ b/restaurant.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Menu - FoodExpress</title>
-    <link rel="stylesheet" href="css/restaurant.css">
+    <link rel="stylesheet" href="restaurant.css">
 </head>
 <body>
     <header>
