--- a/restaurant.html
+++ b/restaurant.html
@@ -35,6 +35,6 @@
         </div>
     </main>
 
-    <script src="js/restaurant.js"></script>
+    <script src="restaurant.js"></script>
 </body>
 </html>
