--- a/cart.html
+++ b/cart.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Cart - FoodExpress</title>
-    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="cart.css">
 </head>
 <body>
     <header>
@@ -34,6 +34,6 @@
         </div>
     </main>
 
-    <script src="js/cart.js"></script>
+    <script src="cart.js"></script>
 </body>
 </html>
