--- a/cart.html
+++ b/cart.html
@@ -35,5 +35,7 @@
     </main>
 
     <script src="cart.js"></script>
+    <script> window.chtlConfig = { chatbotId: "4921427583" } </script>
+<script async data-id="4921427583" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
 </body>
 </html>
