--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
     </main>
 
     <script src="script.js"></script>
-
+    <script> window.chtlConfig = { chatbotId: "4921427583" } </script>
+    <script async data-id="4921427583" id="chatling-embed-script" type="text/javascript" src="https://chatling.ai/js/embed.js"></script>
     
 </body>
 </html>
